syntax = "proto2";

package WebpbOptsProto;

option java_package = "auto.alias.webpb";

import "webpb/WebpbExtend.proto";
import "imports/WebpbOptions.proto";

message Level3 {
  required int32 test1 = 1;
}

message Level2 {
  required int32 test1 = 1;
  required Level3 test2 = 2;
  repeated Level3 test3 = 3;
}

message Level1 {
  required int32 test1 = 1;
  required Level2 test2 = 2;
  repeated Level2 test3 = 3;
  required Level3 test4 = 4;
  map<int32, Level3> test5 = 5;
  map<string, Level3> test6 = 6;
}
